[package]
name = "planetkit"
version = "0.0.1"
authors = ["Jeff Parsons <jeff@parsons.io>"]
build = "build.rs"

[features]
nightly = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/bin/main.rs"

[dependencies]
noise = "0.2.0"
piston = "0.31.3"
piston2d-graphics = "0.21.1"
pistoncore-glutin_window = "0.35.0"
piston2d-opengl_graphics = "0.40.0"
gfx = "0.14.0"
gfx_device_gl = "0.13.0"
piston_window = "0.64.0"
camera_controllers = "0.20.0"
vecmath = "0.3.0"
shader_version = "0.2.1"
nalgebra = "0.10.1"
rand = "0.3.14"
slog = "1.3.2"
slog-term = "1.3.3"
chrono = "0.2"
specs = "0.7.0"
num-traits = "0.1.36"
itertools = "0.5.9"

[build-dependencies]
rustc_version = "0.1.*"
