[package]
name = "kaboom"
version = "0.0.1"
authors = ["Jeff Parsons <jeff@parsons.io>"]

[dependencies]
planetkit = { path = "../planetkit" }
rand = "0.4.1"
shred = "0.5.0"
specs = "0.10.0"
slog = "2.0.4"
serde = "1.0.10"
serde_derive = "1.0.10"
clap = "2.26.2"
piston = "0.36.0"
piston_window = "0.77.0"
