[package]
name = "kaboom"
version = "0.0.1"
authors = ["Jeff Parsons <jeff@parsons.io>"]

[dependencies]
planetkit = { path = "../planetkit" }
rand = "0.5.3"
shred = "0.7.0"
specs = "0.12.0"
slog = "2.0.4"
serde = "1.0.10"
serde_derive = "1.0.10"
clap = "2.26.2"
piston = "0.37.0"
piston_window = "0.80.0"
nalgebra = "0.16"
ncollide3d = "0.17"
nphysics3d = "0.9"
