[package]
name = "kaboom"
version = "0.0.1"
authors = ["Jeff Parsons <jeff@parsons.io>"]
edition = "2018"

[dependencies]
planetkit = { path = "../planetkit" }
rand = "0.6"
rand_xoshiro = "0.1"
shred = "0.7"
specs = "0.14"
slog = "2.0.4"
serde = "1.0.10"
serde_derive = "1.0.10"
clap = "2.26.2"
piston = "0.42"
piston_window = "0.89"
nalgebra = "0.18"
ncollide3d = "0.19"
nphysics3d = "0.11"
