[package]
name = "planetkit"
version = "0.0.1"
authors = ["Jeff Parsons <jeff@parsons.io>"]
build = "build.rs"
license = "MIT/Apache-2.0"
description = """
High-level toolkit for building games based around voxel globes.
"""
repository = "https://github.com/jeffparsons/planetkit"

[features]
nightly = []
web = []
default = ["desktop"]
# All the stuff that won't work on the web.
desktop = ["tokio-core", "tokio-io"]

[lib]
path = "src/lib.rs"

[dependencies]
bytes = "0.4.5"
noise = "0.5.0"
piston = "0.35.0"
piston2d-graphics = "0.25.0"
pistoncore-glutin_window = "0.44.0"
piston2d-opengl_graphics = "0.50.0"
gfx = "0.17.1"
gfx_device_gl = "0.15.0"
piston_window = "0.75.0"
camera_controllers = "0.23.0"
vecmath = "0.3.0"
shader_version = "0.3.0"
nalgebra = "0.14.0"
rand = "0.4.1"
slog = "2.0.4"
slog-term = "2.0.0"
slog-async = "2.0.1"
chrono = "0.4.0"
shred = "0.5.1"
specs = "0.10.0"
num-traits = "0.2.0"
itertools = "0.7.1"
# At time of writing, only used for tests.
approx = "0.1.1"
froggy = "0.4.0"
arrayvec = "0.4.5"
futures = "0.1.14"
serde = "1.0.10"
serde_json = "1.0.2"
serde_derive = "1.0.10"

# Stuff we can't run on the web yet.
tokio-core = { version = "0.1.8", optional = true }
tokio-io = { version = "0.1.3", optional = true }

[build-dependencies]
rustc_version = "0.2.1"
