[package]
name = "planetkit"
version = "0.0.1"
authors = ["Jeff Parsons <jeff@parsons.io>"]
build = "build.rs"
license = "MIT/Apache-2.0"
description = """
High-level toolkit for building games based around voxel globes.
"""
repository = "https://github.com/jeffparsons/planetkit"
edition = "2018"

[features]
nightly = []
web = []
default = ["desktop"]
# All the stuff that won't work on the web.
desktop = ["tokio-core", "tokio-io", "tokio-codec"]

[lib]
path = "src/lib.rs"

[dependencies]
planetkit-grid = { path = "../planetkit-grid" }
bytes = "0.4.5"
noise = "0.5.0"
piston = "0.42"
piston2d-graphics = "0.30"
pistoncore-glutin_window = "0.54"
piston2d-opengl_graphics = "0.59"
gfx = "0.17"
gfx_device_gl = "0.15"
piston_window = "0.89"
camera_controllers = "0.27"
vecmath = "0.3.0"
shader_version = "0.3.0"
nalgebra = "0.18"
ncollide3d = "0.19"
nphysics3d = "0.11"
rand = "0.6"
rand_xoshiro = "0.1"
slog = "2.0.4"
slog-term = "2.0.0"
slog-async = "2.0.1"
chrono = "0.4.0"
shred = "0.7"
shred-derive = "0.5"
specs = "0.14"
num-traits = "0.2.0"
itertools = "0.8"
# At time of writing, only used for tests.
approx = "0.3"
froggy = "0.4.0"
arrayvec = "0.4.5"
futures = "0.1.14"
serde = "1.0.10"
serde_json = "1.0.2"
serde_derive = "1.0.10"

# Stuff we can't run on the web yet.
[target.'cfg(not(target_os = "emscripten"))'.dependencies]
tokio-core = { version = "0.1.17", optional = true }
tokio-io = { version = "0.1.7", optional = true }
tokio-codec = { version = "0.1.0", optional = true }

[build-dependencies]
rustc_version = "0.2.1"
